--- a/C89-S3-Pro-blog/blog-index.yml
+++ b/C89-S3-Pro-blog/blog-index.yml
@@ -5,7 +5,11 @@ server:
 spring:
    application:
       name: blog-index
-      
+   datasource: 
+      driverClassName: com.mysql.jdbc.Driver
+      url: jdbc:mysql://127.0.0.1/C89-S3-Ply-blog?useSSL=false
+      username: root
+      password: a   
 eureka:
    client:
       serviceUrl:
